added store product doc
